--- a/staticman.yml
+++ b/staticman.yml
@@ -11,7 +11,7 @@ comments:
 
   # When allowedOrigins is defined, only requests sent from one of the domains
   # listed will be accepted.
-  allowedOrigins: ["localhost", "hugo.staticman.net"]
+  allowedOrigins: ["localhost", "mjabuz.github.io"]
 
   # (*) REQUIRED
   #
@@ -60,7 +60,7 @@ comments:
 
 posts:
   allowedFields: ["title", "body"]
-  allowedOrigins: ["localhost", "hugo.staticman.net"]
+  allowedOrigins: ["localhost", "mjabuz.github.io"]
   branch: "master"
   generatedFields:
     date:
